--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "cryptocompare": "^0.7.0",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.11",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
-    "styled-components": "4.0.2"
+    "styled-components": "4.0.2",
+    "yarn": "^1.12.3"
   },
   "scripts": {
     "start": "react-scripts start",
