--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "cryptocompare": "^0.7.0",
+    "fuzzy": "^0.1.3",
     "loadash": "^1.0.0",
     "lodash": "^4.17.11",
     "react": "^16.6.3",
