--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "fuzzy": "^0.1.3",
     "loadash": "^1.0.0",
     "lodash": "^4.17.11",
+    "moments": "^0.0.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-highcharts": "^16.0.2",
