--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "cryptodash",
   "version": "0.1.0",
   "private": true,
+
   "dependencies": {
     "cryptocompare": "^0.7.0",
     "fuzzy": "^0.1.3",
+   
     "loadash": "^1.0.0",
     "lodash": "^4.17.11",
     "moments": "^0.0.2",
@@ -12,6 +14,7 @@
     "react-dom": "^16.6.3",
     "react-highcharts": "^16.0.2",
     "react-scripts": "2.1.1",
+    "readline": "^1.3.0",
     "styled-components": "4.0.2",
     "yarn": "^1.12.3"
   },
